--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^6.2.1",
     "bcrypt": "^5.1.1",
