--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -20,7 +20,15 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "./src",
+    "paths": {
+      "@/header/*": ["./features/header/*"],
+      "@/shared/*": ["./features/shared/*"],
+      "@/auth/*": ["./features/home/*"],
+      "@/home/*": ["./features/auth//*"]
+    }
   },
   "include": ["src"]
 }
