--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -25,8 +25,9 @@
     "baseUrl": "./src",
     "paths": {
       "@/shared/*": ["./features/shared/*"],
-      "@/auth/*": ["./features/home/*"],
-      "@/home/*": ["./features/auth//*"],
+      "@/home/*": ["./features/home/*"],
+      "@/overlay/*": ["./features/overlay/*"],
+      "@/auth/*": ["./features/auth/*"],
       "@/menu/*": ["./features/menu/*"],
       "@/storeHooks/*": ["./services/store/hooks/*"],
       "@/storeTypes/*": ["./services/store/*"]
