--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
